changed profile pick in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gabrielle Wink"
-  avatar           : "profile.png"
+  avatar           : "ndseg_present.JPEG"
   bio              : "PhD Graduate Student at Center for Robotics and Biosystems, Northwestern University"
   location         : 
   employer         :
